Resources/style.css
html{
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #f9f9f9;
    font-size: 14px;
    background-image: url('/Resources/HVS outline light.png');
    background-position: right bottom;
    background-size: 40%;
    background-repeat: no-repeat;
    height: 100%;
}
a{
    text-decoration: none;
}
h1, h2, h3, h4, h5, h6{
    width: 100%;
    color: #75ab38;
    font-weight: 100;
}
h1{
    color: #555;
    font-size: 24px;
}
h2{font-size: 20px;}
button{
    background: #75ab38;
    color: #fff;
    padding: 9px 20px;
    height: 2.25rem;
    border: none;
    border-radius: 5px;
}
.card{
    padding: 10px;
    margin: 10px;
    width: 250px;
    display: inline-flex;
    flex-direction: column;
    align-items:flex-end;
    border: none;
    border-radius: 10px;
    color: #333;
    background-color: #fff;
    background-position: right center;
    background-size: cover;
    background-repeat: no-repeat;
    box-shadow: 0px 0px 4px #eee;
}
.card.tall{
    height: 250px;
}
.card .cta{
    margin: 10px;
    width: 150px;
}
.card button{
    margin: 10px;
    align-items: center;
}
.BG-Grey{background-color: #444; color: #ccc;}
.TXT-Dark{color: #333;}
@media (prefers-color-scheme: Dark) {
    html{
        background-color: #333;
        background-image: url('/Resources/HVS outline dark.png');
    }
    h1{ color: #fcfcfc;}
    .card{
        color: #ccc;
        background-color: #555;
        box-shadow: 0px 0px 4px #111;
    }
}

